versions/v1.5/modules/en/pages/add-ons/harvester-seeder.adoc
= Harvester Seeder
:description: Use the harvester-seeder add-on to perform out-of-band operations and discover hardware events on SUSE Virtualization hosts using IPMI and Redfish
:revdate: 2025-12-31
:page-revdate: {revdate}

[NOTE]
====
*harvester-seeder* is an *experimental* add-on. For more information about experimental features, see xref:introduction/document-conventions.adoc#_feature_labels[Feature Labels].
====

The *harvester-seeder* add-on allows you to perform out-of-band operations on {harvester-product-name} hosts using the Intelligent Platform Management Interface (IPMI).

This add-on can also discover hardware and related events for hosts that support https://www.dmtf.org/standards/redfish[Redfish]-based access, and then associate that hardware with the corresponding hosts.

== Prerequisites

Ensure that the following requirements are met before enabling the add-on.

* IPMI access is enabled on the hosts, and your user account has the necessary privileges for performing related operations.
+
If you are using https://github.com/ipmitool/ipmitool[ipmitool], you can run `ipmitool -I lanplus -H iloOriDracIPAddress -U admin -P admin sel list` to verify that both requirements are met.

* Redfish is enabled.
+
You can run `+curl -vk https://iloOriDracIPAddress/redfish/v1+` to verify that Redfish is enabled.

* Ports 443 and 623 are reachable.
+
Some IPMI implementations allow you to access devices using a web interface on port 443. However, IPMI devices are more commonly accessed using a command-line interface on UDP port 623 (IPMI over IP).

* Alerts are enabled on the hosts.
+
Some hardware vendors may require that you enable alerts.

== Enabling the add-on and configuring hosts

. On the {harvester-product-name} UI, go to *Advanced -> Add-ons*.

. Select *harvester-seeder*, and then select *⋮ -> Enable*.
+
After a few seconds, the value of *State* changes to *DeploySuccessful*.

. Go to the *Hosts* screen.
+
You must edit the configuration of each host listed on this screen.

. Select a host, and then select *⋮ -> Edit Config*.
+
image::seeder/EditConfig.png[]

. On the *Out-of-Band Access* tab, select *Enabled*, configure the settings, and then select *Save*.
+
The add-on uses the information to connect to your IPMI interface.
+
image::seeder/OutOfBandAccess.png[]

== Power-related operations

You can use the {harvester-product-name} UI to shut down and reboot hosts once the Out-of-Band Access settings are configured. However, you must first enable xref:hosts/hosts.adoc#_node_maintenance[Maintenance Mode], which automatically migrates all VMs to other nodes. *harvester-seeder* communicates with the hosts via IPMI when performing the selected operation.

image::seeder/ShutdownReboot.png[]

You can also power on VMs while Maintenance Mode is enabled.

image::seeder/PowerOn.png[]

== Hardware Event Aggregation

If you selected *Enabled* in the *Event* section of the *Out-of-Band Access* settings screen, *harvester-seeder* uses Redfish to query the hardware for information about component failures and fan temperatures. The information is converted to Kubernetes events during hardware reconciliation and is then handled by the Kubernetes garbage collection policy. {harvester-product-name} stores these events for 1 hour by default.

image::seeder/HardwareEvents.png[]

== Troubleshooting

The *Out-of-Band Access* settings screen may become unresponsive and display the message `Waiting for "inventories.metal.harvesterhci.io" to be ready`. You must refresh the page whenever this occurs. For more information, see https://github.com/harvester/harvester/issues/4412[Issue #4412].

If you encounter persistent issues while using *harvester-seeder*, submit the following to SUSE Support:

* Support bundle
* Output of the command `kubectl get machine -n harvester-system -o yaml`
